putting search bar icon alongside line

--- a/index.html
+++ b/index.html
@@ -70,7 +70,40 @@
         alt="badge"
       />
       <!-- list of items to select in second navbar -->
-      <ul class="second-nav__list"></ul>
+      <ul class="second-nav__list">
+        <li class="second-nav-item">
+          <a href="#" class="second-nav-link">Latest</a>
+          <!-- Markup for the dropdown -->
+          <div class="dropdown">
+            <ul class="dropdown__first-list">
+              <li class="dropdown__list-link">
+                <a href="#" class="dropdown__list-link">Latest</a>
+                <a href="#" class="dropdown__list-link">Injuries</a>
+                <a href="#" class="dropdown__list-link">Men</a>
+                <a href="#" class="dropdown__list-link">Women</a>
+                <a href="#" class="dropdown__list-link">Academy</a>
+                <a href="#" class="dropdown__list-link">Under 21's</a>
+                <a href="#" class="dropdown__list-link">Under 18's</a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="second-nav-item">
+          <a href="#" class="second-nav-link">Matches</a>
+        </li>
+        <li class="second-nav-item">
+          <a href="#" class="second-nav-link">Stadium</a>
+        </li>
+        <li class="second-nav-item">
+          <a href="#" class="second-nav-link">Culture</a>
+        </li>
+        <li class="second-nav-item">
+          <a href="#" class="second-nav-link">Tickets</a>
+        </li>
+        <li class="second-nav-item">
+          <a href="#" class="second-nav-link">Shop</a>
+        </li>
+      </ul>
       <!-- styled burger menu for smaller devices -->
       <button class="menu-toggle">
         <div class="menu-toggle__inner">
@@ -147,7 +180,7 @@
         <img class="feature__icon" src="img/favicons/serpent-favicon.png" />
         <h4 class="heading-4">Membership</h4>
         <p class="feature__text">
-          Creating a Sea Serpents account unlocks exclusive video content,
+          Creating a Blue Sea Serpents account unlocks exclusive video content,
           including match highlights, player interviews and analysis.
         </p>
       </div>
@@ -156,16 +189,16 @@
         <h4 class="heading-4">Official Supporters Clubs</h4>
         <p class="feature__text">
           We are proud to have 225 Official Supporters' Clubs in countries all
-          over the world, including England, Australia, USA and Japan.
+          over the world, including England, Italy, USA and Germany.
         </p>
       </div>
       <div class="feature">
         <img class="feature__icon" src="img/favicons/stadium-favicon.png" />
         <h4 class="heading-4">Tickets & Hospitality</h4>
         <p class="feature__text">
-          A Blue Lions membership allows supporters priority purchasing matchday
-          tickets. Hospitality packages are also availiable, with our complex
-          playing host to a premium conference center.
+          A Blue Sea Serpents membership allows supporters priority purchasing
+          matchday tickets. Hospitality packages are also availiable, with our
+          complex playing host to a premium conference center.
         </p>
       </div>
       <div class="feature">
@@ -188,8 +221,8 @@
         <img class="feature__icon" src="img/favicons/trophy-favicon.png" />
         <h4 class="heading-4">Trophies</h4>
         <p class="feature__text">
-          The Blue Lions have won it all. 25 league titles, 15 domestic cups and
-          8 international triumphs since we were founded in 1908.
+          The Blue Sea Serpents have won it all. 25 league titles, 15 domestic
+          cups and 8 international triumphs since we were founded in 1908.
         </p>
       </div>
     </section>
