changing the second navbar

--- a/index.html
+++ b/index.html
@@ -61,43 +61,46 @@
         </form>
       </div>
     </div>
-    <!-- Second Navbar section -->
-    <nav class="second-nav">
-      <!-- logo of the football team -->
-      <img
-        class="second-nav__badge"
-        src="img/identity/football-badge.png"
-        alt="badge"
-      />
-      <!-- list of items to select in second navbar -->
-      <ul class="second-nav__list">
-        <li class="second-nav-item">
-          <a href="#" class="second-nav-link">Latest</a>
-        </li>
-        <li class="second-nav-item">
-          <a href="#" class="second-nav-link">Matches</a>
-        </li>
-        <li class="second-nav-item">
-          <a href="#" class="second-nav-link">Stadium</a>
-        </li>
-        <li class="second-nav-item">
-          <a href="#" class="second-nav-link">Culture</a>
-        </li>
-        <li class="second-nav-item">
-          <a href="#" class="second-nav-link">Tickets</a>
-        </li>
-        <li class="second-nav-item">
-          <a href="#" class="second-nav-link">Shop</a>
-        </li>
-      </ul>
-      <!-- styled burger menu for smaller devices -->
-      <button class="menu-toggle">
-        <div class="menu-toggle__inner">
-          <span></span>
-        </div>
-        <div class="menu-toggle__label">More</div>
-      </button>
-    </nav>
+
+    <div class="second-nav__container">
+      <!-- Second Navbar section -->
+      <nav class="second-nav__content">
+        <!-- logo of the football team -->
+        <img
+          class="second-nav__badge"
+          src="img/identity/football-badge.png"
+          alt="badge"
+        />
+        <!-- list of items to select in second navbar -->
+        <ul class="second-nav__list">
+          <li class="second-nav-item">
+            <a href="#" class="second-nav-link">Latest</a>
+          </li>
+          <li class="second-nav-item">
+            <a href="#" class="second-nav-link">Matches</a>
+          </li>
+          <li class="second-nav-item">
+            <a href="#" class="second-nav-link">Stadium</a>
+          </li>
+          <li class="second-nav-item">
+            <a href="#" class="second-nav-link">Culture</a>
+          </li>
+          <li class="second-nav-item">
+            <a href="#" class="second-nav-link">Tickets</a>
+          </li>
+          <li class="second-nav-item">
+            <a href="#" class="second-nav-link">Shop</a>
+          </li>
+        </ul>
+        <!-- styled burger menu for smaller devices -->
+        <button class="menu-toggle">
+          <div class="menu-toggle__inner">
+            <span></span>
+          </div>
+          <div class="menu-toggle__label">More</div>
+        </button>
+      </nav>
+    </div>
 
     <!-- Header section -->
     <header class="header">
