--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
         <!-- list of items to select in second navbar -->
         <ul class="second-nav__list">
           <li class="second-nav__item">
-            <a href="#" class="second-nav-link">Latest</a>
+            <a href="#" class="second-nav__link">Latest</a>
           </li>
           <li class="second-nav__item">
-            <a href="#" class="second-nav-link">Matches</a>
+            <a href="#" class="second-nav__link">Matches</a>
           </li>
           <li class="second-nav__item">
-            <a href="#" class="second-nav-link">Stadium</a>
+            <a href="#" class="second-nav__link">Stadium</a>
           </li>
           <li class="second-nav__item">
-            <a href="#" class="second-nav-link">Culture</a>
+            <a href="#" class="second-nav__link">Culture</a>
           </li>
           <li class="second-nav__item">
-            <a href="#" class="second-nav-link">Tickets</a>
+            <a href="#" class="second-nav__link">Tickets</a>
           </li>
           <li class="second-nav__item">
-            <a href="#" class="second-nav-link">Shop</a>
+            <a href="#" class="second-nav__link">Shop</a>
           </li>
         </ul>
         <!-- styled burger menu for smaller devices -->
