--- a/index.html
+++ b/index.html
@@ -70,28 +70,31 @@
         alt="badge"
       />
       <!-- Second Navbar section -->
-      <nav class="second-nav__content">
-        <!-- list of items to select in second navbar -->
-        <ul class="second-nav__list">
-          <li class="second-nav__item">
-            <a href="#" class="second-nav__link">Latest</a>
-          </li>
-          <li class="second-nav__item">
-            <a href="#" class="second-nav__link">Matches</a>
-          </li>
-          <li class="second-nav__item">
-            <a href="#" class="second-nav__link">Stadium</a>
-          </li>
-          <li class="second-nav__item">
-            <a href="#" class="second-nav__link">Culture</a>
-          </li>
-          <li class="second-nav__item">
-            <a href="#" class="second-nav__link">Tickets</a>
-          </li>
-          <li class="second-nav__item">
-            <a href="#" class="second-nav__link">Shop</a>
-          </li>
-        </ul>
+      <div class="second-nav__inner">
+        <!-- Specific second nav -->
+        <nav class="second-nav__content">
+          <!-- list of items to select in second navbar -->
+          <ul class="second-nav__list">
+            <li class="second-nav__item">
+              <a href="#" class="second-nav__link">Latest</a>
+            </li>
+            <li class="second-nav__item">
+              <a href="#" class="second-nav__link">Matches</a>
+            </li>
+            <li class="second-nav__item">
+              <a href="#" class="second-nav__link">Stadium</a>
+            </li>
+            <li class="second-nav__item">
+              <a href="#" class="second-nav__link">Culture</a>
+            </li>
+            <li class="second-nav__item">
+              <a href="#" class="second-nav__link">Tickets</a>
+            </li>
+            <li class="second-nav__item">
+              <a href="#" class="second-nav__link">Shop</a>
+            </li>
+          </ul>
+        </nav>
         <!-- styled burger menu for smaller devices -->
         <button class="menu-toggle">
           <div class="menu-toggle__inner">
@@ -99,7 +102,9 @@
           </div>
           <div class="menu-toggle__label">More</div>
         </button>
-      </nav>
+
+        <div class="second-nav__background">&nbsp;</div>
+      </div>
     </div>
 
     <!-- Header section -->
