background behind nav toggle

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
           <div class="menu-toggle__label">More</div>
         </button>
-
+        <!-- background behind menu toggle -->
         <div class="second-nav__background">&nbsp;</div>
       </div>
     </div>
