--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
         </ul>
       </nav>
       <!-- styled burger menu for smaller devices -->
-      <input type="checkbox" class="menu-toggle" id="navi-toggle">
+      <button class="menu-toggle">
         <div class="menu-toggle__inner">
           <span></span>
         </div>
-        <label for="navi-toggle" class="menu-toggle__label">More</label>
-      </input>
+        <div class="menu-toggle__label">More</div>
+      </button>
       <!-- background behind menu toggle -->
       <div class="second-nav__background">&nbsp;</div>
     </div>
