checkbox:checked needed, further testing required

--- a/index.html
+++ b/index.html
@@ -94,14 +94,12 @@
         </ul>
       </nav>
       <!-- styled burger menu for smaller devices -->
-      <button class="menu-toggle">
-        <div class="menu-toggle__inner">
-          <span></span>
-        </div>
-        <div class="menu-toggle__label">More</div>
-      </button>
+      <input class="menu-toggle" type="checkbox" id="navi-toggle" />
+      <label for="navi=toggle" class="menu-toggle__label"
+        ><span class="menu-toggle__inner"></span>More</label
+      >
       <!-- background behind menu toggle -->
-      <div class="second-nav__background">&nbsp;</div>
+      <div class="menu-toggle__background">&nbsp;</div>
     </div>
 
     <!-- Header section -->
