work on the navbar

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
         </ul>
       </nav>
       <!-- styled burger menu for smaller devices -->
-      <input class="menu-toggle" type="checkbox" id="navi-toggle" />
-      <label for="navi=toggle" class="menu-toggle__label"
-        ><span class="menu-toggle__inner"></span>More</label
-      >
+      <input class="second-nav__checkbox" type="checkbox" id="navi-toggle" />
+      <label for="navi-toggle" class="second-nav__toggle"
+        ><span class="second-nav__inner"></span
+      ></label>
       <!-- background behind menu toggle -->
-      <div class="menu-toggle__background">&nbsp;</div>
+      <div class="second-nav__background">&nbsp;</div>
     </div>
 
     <!-- Header section -->
