--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
       <!-- styled burger menu for smaller devices -->
       <input class="second-nav__checkbox" type="checkbox" id="navi-toggle" />
       <label for="navi-toggle" class="second-nav__toggle"
-        ><span class="second-nav__inner"></span
-      ></label>
+        ><span class="second-nav__inner"
+          ><p class="second-nav__label">More</p></span
+        ></label
+      >
       <!-- background behind menu toggle -->
       <div class="second-nav__background">&nbsp;</div>
     </div>
