hamburger icon fix

--- a/index.html
+++ b/index.html
@@ -95,10 +95,8 @@
       </nav>
       <!-- styled burger menu for smaller devices -->
       <input class="second-nav__checkbox" type="checkbox" id="navi-toggle" />
-      <label for="navi-toggle" class="second-nav__toggle"
-        ><span class="second-nav__inner"
-          ><p class="second-nav__label">More</p></span
-        ></label
+      <label for="navi-toggle" class="second-nav__button"
+        ><span class="second-nav__icon">&nbsp;</span></label
       >
       <!-- background behind menu toggle -->
       <div class="second-nav__background">&nbsp;</div>
