for debugging purposes

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         alt="badge"
       />
       <!-- styled burger menu for smaller devices -->
-      <input class="second-nav__checkbox" type="checkbox" id="navi-toggle" />
-      <label for="navi-toggle" class="second-nav__button"
-        ><span class="second-nav__icon">&nbsp;</span></label
-      >
+      <input type="checkbox" class="second-nav__checkbox" id="navi-toggle" />
+      <label for="navi-toggle" class="second-nav__button">
+        <span class="second-nav__icon">&nbsp;</span>
+      </label>
       <!-- background behind menu toggle -->
       <div class="second-nav__background">&nbsp;</div>
       <!-- Specific second nav -->
