--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
       </nav>
     </div>
 
+    <!-- Banner section -->
+    <section class="banner">
+      <div class="banner__content">
+        <h1 class="banner__heading">Example text</h1>
+      </div>
+    </section>
+
     <!-- Header section -->
     <header class="header">
       <h3 class="heading-3 header__headline-text">
