more markup added

--- a/index.html
+++ b/index.html
@@ -107,6 +107,20 @@
       <div class="banner__content">
         <h1 class="banner__heading">Example text</h1>
       </div>
+      <div class="slideshow">
+        <div class="slide">
+          <img src="img/header-image2.png" />
+        </div>
+        <div class="slide">
+          <img src="img/conference.png" />
+        </div>
+        <div class="slide">
+          <img src="img/training-top.png" />
+        </div>
+        <div class="slide">
+          <img src="img/match.png" />
+        </div>
+      </div>
     </section>
 
     <!-- Header section -->
