headings will go in slide element markup

--- a/index.html
+++ b/index.html
@@ -104,10 +104,13 @@
 
     <!-- Banner section -->
     <section class="banner">
-      <div class="banner__content">
-        <h1 class="banner__heading">Example text</h1>
-      </div>
       <div class="slideshow">
+        <!-- headings for the articles -->
+        <h1 class="slide__header slide__header--1">Example 1</h1>
+        <h1 class="slide__header slide__header--1">Example 2</h1>
+        <h1 class="slide__header slide__header--1">Example 3</h1>
+        <h1 class="slide__header slide__header--1">Example 4</h1>
+        <!-- headings for the slideshow -->
         <div class="slide">
           <img src="img/header-image2.png" />
         </div>
