adding the initial css for slideshow

--- a/index.html
+++ b/index.html
@@ -117,18 +117,20 @@
         <button class="slide__btn slide__btn--3"></button>
         <button class="slide__btn slide__btn--4"></button>
 
-        <!-- headings for the slideshow -->
-        <div class="slide">
-          <img src="img/header-image2.png" />
-        </div>
-        <div class="slide">
-          <img src="img/conference.png" />
-        </div>
-        <div class="slide">
-          <img src="img/training-top.png" />
-        </div>
-        <div class="slide">
-          <img src="img/match.png" />
+        <!-- slideshow images-->
+        <div class="slideshow__wrapper">
+          <div class="slide">
+            <img src="img/header-image2.png" />
+          </div>
+          <div class="slide">
+            <img src="img/conference.png" />
+          </div>
+          <div class="slide">
+            <img src="img/training-top.png" />
+          </div>
+          <div class="slide">
+            <img src="img/match.png" />
+          </div>
         </div>
       </div>
     </section>
