banner slideshow work

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
         <h1 class="slide__header slide__header--1">Example 3</h1>
         <h1 class="slide__header slide__header--1">Example 4</h1> -->
 
-        <!-- slide buttons -->
+        <!-- slide buttons 
         <button class="slide__btn slide__btn--1"></button>
         <button class="slide__btn slide__btn--2"></button>
         <button class="slide__btn slide__btn--3"></button>
-        <button class="slide__btn slide__btn--4"></button>
+        <button class="slide__btn slide__btn--4"></button> -->
 
         <!-- slideshow images-->
         <div class="slideshow__wrapper">
