--- a/index.html
+++ b/index.html
@@ -105,31 +105,29 @@
     <!-- Banner section -->
     <section class="banner">
       <div class="slideshow">
-        <!-- headings for the articles 
-        <h1 class="slide__header slide__header--1">Example 1</h1>
-        <h1 class="slide__header slide__header--1">Example 2</h1>
-        <h1 class="slide__header slide__header--1">Example 3</h1>
-        <h1 class="slide__header slide__header--1">Example 4</h1> -->
-
-        <!-- slide buttons 
+        <!-- slide buttons -->
         <button class="slide__btn slide__btn--1"></button>
         <button class="slide__btn slide__btn--2"></button>
         <button class="slide__btn slide__btn--3"></button>
-        <button class="slide__btn slide__btn--4"></button> -->
+        <button class="slide__btn slide__btn--4"></button>
 
         <!-- slideshow images-->
         <div class="slideshow__wrapper">
           <div class="slide">
             <img src="img/header-image2.png" />
+            <!-- <h1 class="slide__header slide__header--1">Example 1</h1> -->
           </div>
           <div class="slide">
             <img src="img/conference.png" />
+            <!-- <h1 class="slide__header slide__header--1">Example 2</h1> -->
           </div>
           <div class="slide">
             <img src="img/training-top.png" />
+            <!-- <h1 class="slide__header slide__header--1">Example 3</h1> -->
           </div>
           <div class="slide">
             <img src="img/match.png" />
+            <!-- <h1 class="slide__header slide__header--1">Example 4</h1> -->
           </div>
         </div>
       </div>
