beginning of table markup

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
       </div>
     </section>
 
+    <!-- Football Table section -->
+    <div class="table"></div>
+
     <!-- Header section -->
     <header class="header">
       <h3 class="heading-3 header__headline-text">
