more markup for football table

--- a/index.html
+++ b/index.html
@@ -134,7 +134,22 @@
     </section>
 
     <!-- Football Table section -->
-    <div class="table"></div>
+    <div class="table">
+      <table class="table__content table__sortable">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Team</th>
+            <th>GP</th>
+            <th>W</th>
+            <th>D</th>
+            <th>L</th>
+            <th>GD</th>
+            <th>PTS</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
 
     <!-- Header section -->
     <header class="header">
