--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="table">
       <table class="table__content table__sortable">
         <thead>
-          <tr>
+          <tr class="table_header">
             <th>#</th>
             <th>Team</th>
             <th>GP</th>
@@ -146,6 +146,36 @@
             <th>L</th>
             <th>GD</th>
             <th>PTS</th>
+          </tr>
+          <tr>
+            <th>1</th>
+            <th>FC THG 08</th>
+            <th>15</th>
+            <th>13</th>
+            <th>1</th>
+            <th>1</th>
+            <th>25</th>
+            <th>40</th>
+          </tr>
+          <tr>
+            <th>2</th>
+            <th>EGFC</th>
+            <th>15</th>
+            <th>10</th>
+            <th>2</th>
+            <th>3</th>
+            <th>18</th>
+            <th>32</th>
+          </tr>
+          <tr>
+            <th>3</th>
+            <th>Athletic Sport</th>
+            <th>15</th>
+            <th>9</th>
+            <th>4</th>
+            <th>2</th>
+            <th>20</th>
+            <th>31</th>
           </tr>
         </thead>
       </table>
