working on markup to improve banner structure

--- a/index.html
+++ b/index.html
@@ -114,26 +114,26 @@
         <!-- slideshow images-->
         <div class="slideshow__wrapper">
           <div class="slide">
-            <img src="img/header-image2.png" />
+            <img class="slide__image" src="img/header-image2.png" />
             <!-- <h1 class="slide__header slide__header--1">Example 1</h1> -->
           </div>
           <div class="slide">
-            <img src="img/conference.png" />
+            <img class="slide__image" src="img/conference.png" />
             <!-- <h1 class="slide__header slide__header--1">Example 2</h1> -->
           </div>
           <div class="slide">
-            <img src="img/training-top.png" />
+            <img class="slide__image" src="img/training-top.png" />
             <!-- <h1 class="slide__header slide__header--1">Example 3</h1> -->
           </div>
           <div class="slide">
-            <img src="img/match.png" />
+            <img class="slide__image" src="img/match.png" />
             <!-- <h1 class="slide__header slide__header--1">Example 4</h1> -->
           </div>
         </div>
       </div>
     </section>
 
-    <div class="sea-sepent__container">
+    <section class="sea-sepent__container">
       <div class="sea-serpent__ripple">
         <span style="--i: 1"></span>
         <span style="--i: 2"></span>
@@ -170,7 +170,7 @@
         <span style="--i: 9"></span>
         <span style="--i: 10"></span>
       </div>
-    </div>
+    </section>
 
     <!-- Header section -->
     <header class="header">
