--- a/index.html
+++ b/index.html
@@ -134,42 +134,44 @@
     </section>
 
     <section class="sea-sepent__container">
-      <div class="sea-serpent__ripple">
-        <span style="--i: 1"></span>
-        <span style="--i: 2"></span>
-        <span style="--i: 3"></span>
-        <span style="--i: 4"></span>
-        <span style="--i: 5"></span>
-        <span style="--i: 6"></span>
-        <span style="--i: 7"></span>
-        <span style="--i: 8"></span>
-        <span style="--i: 9"></span>
-        <span style="--i: 10"></span>
-      </div>
-      <div class="sea-serpent__ripple">
-        <span style="--i: 1"></span>
-        <span style="--i: 2"></span>
-        <span style="--i: 3"></span>
-        <span style="--i: 4"></span>
-        <span style="--i: 5"></span>
-        <span style="--i: 6"></span>
-        <span style="--i: 7"></span>
-        <span style="--i: 8"></span>
-        <span style="--i: 9"></span>
-        <span style="--i: 10"></span>
-      </div>
-      <div class="sea-serpent__ripple">
-        <span style="--i: 1"></span>
-        <span style="--i: 2"></span>
-        <span style="--i: 3"></span>
-        <span style="--i: 4"></span>
-        <span style="--i: 5"></span>
-        <span style="--i: 6"></span>
-        <span style="--i: 7"></span>
-        <span style="--i: 8"></span>
-        <span style="--i: 9"></span>
-        <span style="--i: 10"></span>
-      </div>
+      <!-- <div class="sea-sepent__content">
+        <div class="sea-serpent__ripple">
+          <span style="--i: 1"></span>
+          <span style="--i: 2"></span>
+          <span style="--i: 3"></span>
+          <span style="--i: 4"></span>
+          <span style="--i: 5"></span>
+          <span style="--i: 6"></span>
+          <span style="--i: 7"></span>
+          <span style="--i: 8"></span>
+          <span style="--i: 9"></span>
+          <span style="--i: 10"></span>
+        </div>
+        <div class="sea-serpent__ripple">
+          <span style="--i: 1"></span>
+          <span style="--i: 2"></span>
+          <span style="--i: 3"></span>
+          <span style="--i: 4"></span>
+          <span style="--i: 5"></span>
+          <span style="--i: 6"></span>
+          <span style="--i: 7"></span>
+          <span style="--i: 8"></span>
+          <span style="--i: 9"></span>
+          <span style="--i: 10"></span>
+        </div>
+        <div class="sea-serpent__ripple">
+          <span style="--i: 1"></span>
+          <span style="--i: 2"></span>
+          <span style="--i: 3"></span>
+          <span style="--i: 4"></span>
+          <span style="--i: 5"></span>
+          <span style="--i: 6"></span>
+          <span style="--i: 7"></span>
+          <span style="--i: 8"></span>
+          <span style="--i: 9"></span>
+          <span style="--i: 10"></span>
+        </div>
+      </div>-->
     </section>
 
     <!-- Header section -->
