test if this a slideshow width issue

--- a/index.html
+++ b/index.html
@@ -133,9 +133,12 @@
       </div>
     </section>
 
-    <section class="sea-sepent__container">
-      <!-- <div class="sea-sepent__content">
-        <div class="sea-serpent__ripple">
+    <div style="grid-column: col-end 4 / full-end">
+      <div
+        style="grid-column: col-end 4 / full-end"
+        class="sea-sepent__content"
+      >
+        <!-- <div class="sea-serpent__ripple">
           <span style="--i: 1"></span>
           <span style="--i: 2"></span>
           <span style="--i: 3"></span>
@@ -170,9 +173,9 @@
           <span style="--i: 8"></span>
           <span style="--i: 9"></span>
           <span style="--i: 10"></span>
-        </div>
-      </div>-->
-    </section>
+        </div>-->
+      </div>
+    </div>
 
     <!-- Header section -->
     <header class="header">
