movement of the banner

--- a/index.html
+++ b/index.html
@@ -102,6 +102,48 @@
       </nav>
     </div>
 
+    <!-- -->
+    <div class="sea-sepent__container">
+      <div class="sea-sepent__content">
+        <div class="sea-serpent__ripple">
+          <span class="sea-sepent__ripple--effect" style="--i: 1"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 2"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 3"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 4"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 5"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 6"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 7"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 8"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 9"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 10"></span>
+        </div>
+        <div class="sea-serpent__ripple">
+          <span class="sea-sepent__ripple--effect" style="--i: 1"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 2"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 3"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 4"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 5"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 6"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 7"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 8"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 9"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 10"></span>
+        </div>
+        <div class="sea-serpent__ripple">
+          <span class="sea-sepent__ripple--effect" style="--i: 1"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 2"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 3"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 4"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 5"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 6"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 7"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 8"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 9"></span>
+          <span class="sea-sepent__ripple--effect" style="--i: 10"></span>
+        </div>
+      </div>
+    </div>
+
     <!-- Banner section -->
     <section class="banner">
       <div class="slideshow">
@@ -132,66 +174,6 @@
         </div>
       </div>
     </section>
-
-    <div style="grid-column: col-end 4 / full-end">
-      <div
-        style="grid-column: col-end 4 / full-end"
-        class="sea-sepent__content"
-      >
-        <!-- <div class="sea-serpent__ripple">
-          <span style="--i: 1"></span>
-          <span style="--i: 2"></span>
-          <span style="--i: 3"></span>
-          <span style="--i: 4"></span>
-          <span style="--i: 5"></span>
-          <span style="--i: 6"></span>
-          <span style="--i: 7"></span>
-          <span style="--i: 8"></span>
-          <span style="--i: 9"></span>
-          <span style="--i: 10"></span>
-        </div>
-        <div class="sea-serpent__ripple">
-          <span style="--i: 1"></span>
-          <span style="--i: 2"></span>
-          <span style="--i: 3"></span>
-          <span style="--i: 4"></span>
-          <span style="--i: 5"></span>
-          <span style="--i: 6"></span>
-          <span style="--i: 7"></span>
-          <span style="--i: 8"></span>
-          <span style="--i: 9"></span>
-          <span style="--i: 10"></span>
-        </div>
-        <div class="sea-serpent__ripple">
-          <span style="--i: 1"></span>
-          <span style="--i: 2"></span>
-          <span style="--i: 3"></span>
-          <span style="--i: 4"></span>
-          <span style="--i: 5"></span>
-          <span style="--i: 6"></span>
-          <span style="--i: 7"></span>
-          <span style="--i: 8"></span>
-          <span style="--i: 9"></span>
-          <span style="--i: 10"></span>
-        </div>-->
-      </div>
-    </div>
-
-    <!-- Header section -->
-    <header class="header">
-      <h3 class="heading-3 header__headline-text">
-        Placeholder for new date js
-      </h3>
-      <h1 class="heading-1">Our new training ground</h1>
-      <button class="btn header__btn">View More</button>
-      <div class="header__corporate-text">Corporate Partners</div>
-      <div class="header__corporate-logos">
-        <img src="img/logos/e-payel.png" alt="E-payel logo" />
-        <img src="img/logos/shalbourne.png" alt="Shalbourne logo" />
-        <img src="img/logos/subiro.png" alt="Subiro logo" />
-        <img src="img/logos/ultramarine.png" alt="Ultramarine logo" />
-      </div>
-    </header>
 
     <!-- Players section -->
     <div class="players">
