de-bugging complete typo error

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
     </div>
 
     <!-- -->
-    <div class="sea-sepent__container">
-      <div class="sea-sepent__content">
+    <div class="sea-serpent__container">
+      <div class="sea-serpent__content">
         <div class="sea-serpent__ripple">
           <span class="sea-sepent__ripple--effect" style="--i: 1"></span>
           <span class="sea-sepent__ripple--effect" style="--i: 2"></span>
