working on responsivity on laptops

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
         </div>
       </div>
     </section>
-    <!-- -->
+
+    <!-- Sea serpent section -->
     <div class="sea-serpent__container">
       <div class="sea-serpent__content">
         <div class="sea-serpent__ripple">
