--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
       </div>
     </section>
 
-    <!-- Sea serpent section -->
-    <div class="sea-serpent__container">
+    <div class="ss-corp__container">
+      <!-- Sea serpent section -->
       <div class="sea-serpent__content">
         <div class="sea-serpent__ripple">
           <span class="sea-sepent__ripple--effect" style="--i: 1"></span>
@@ -172,6 +172,9 @@
           <span class="sea-sepent__ripple--effect" style="--i: 9"></span>
           <span class="sea-sepent__ripple--effect" style="--i: 10"></span>
         </div>
+      </div>
+      <div class="corporate__container">
+        <h1 class="corporate__header">Example Text</h1>
       </div>
     </div>
 
