package json tests

--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
       </div>
     </div>
 
+    <section class="table__container"></section>
+
     <!-- Players section -->
     <div class="players">
       <h2 class="heading-2 heading-2--light players__heading">
