markup added for cube design

--- a/index.html
+++ b/index.html
@@ -178,7 +178,15 @@
       </div>
     </div>
 
-    <section class="table__container"></section>
+    <section class="table__container">
+      <div class="table__row">
+        <div class="table__cube">
+          <span class="table__cube--1"></span>
+          <span class="table__cube--2"></span>
+          <span class="table__cube--3"></span>
+        </div>
+      </div>
+    </section>
 
     <!-- Players section -->
     <div class="players">
