first cude added

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
     <section class="table__container">
       <div class="table__row">
         <div class="table__cube">
-          <span class="table__cube--1"></span>
-          <span class="table__cube--2"></span>
-          <span class="table__cube--3"></span>
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
         </div>
       </div>
     </section>
