--- a/index.html
+++ b/index.html
@@ -185,6 +185,23 @@
           <span class="table__cube--item table__cube--2"></span>
           <span class="table__cube--item table__cube--3"></span>
         </div>
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+      </div>
+
       </div>
     </section>
 
