working on rows of cubes

--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
     </div>
 
     <section class="table__container">
-      <div class="table__row">
+      <!-- row 1 -->
+      <div class="table__row table__row--1">
         <div class="table__cube">
           <span class="table__cube--item table__cube--1"></span>
           <span class="table__cube--item table__cube--2"></span>
@@ -201,7 +202,74 @@
           <span class="table__cube--item table__cube--3"></span>
         </div>
       </div>
-
+      <!-- row 2 -->
+      <div class="table__row table__row--2">
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+      </div>
+      <!-- row 3 -->
+      <div class="table__row table__row--3">
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+      </div>
+      <!-- row 4 -->
+      <div class="table__row table__row--4">
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
+        <div class="table__cube">
+          <span class="table__cube--item table__cube--1"></span>
+          <span class="table__cube--item table__cube--2"></span>
+          <span class="table__cube--item table__cube--3"></span>
+        </div>
       </div>
     </section>
 
